RESOLVED FIXED180794
WebsiteDataStore::defaultDataStoreConfiguration() fails to set default value for serviceWorkerRegistrationDirectory
https://bugs.webkit.org/show_bug.cgi?id=180794
Summary WebsiteDataStore::defaultDataStoreConfiguration() fails to set default value ...
Chris Dumez
Reported 2017-12-13 19:01:38 PST
Add SPI to set the service worker registration directory to _WKWebsiteDataStoreConfiguration, similarly to what we do for IndexedDB.
Attachments
Patch (4.70 KB, patch)
2017-12-13 19:04 PST, Chris Dumez
no flags
Patch (3.18 KB, patch)
2017-12-14 09:48 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-12-13 19:01:51 PST
Chris Dumez
Comment 2 2017-12-13 19:04:23 PST
Geoffrey Garen
Comment 3 2017-12-13 22:45:23 PST
Comment on attachment 329310 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=329310&action=review r=me > Source/WebKit/UIProcess/API/Cocoa/_WKWebsiteDataStoreConfiguration.h:42 > @property (nonatomic, copy, setter=_setWebStorageDirectory:) NSURL *_webStorageDirectory; > @property (nonatomic, copy, setter=_setIndexedDBDatabaseDirectory:) NSURL *_indexedDBDatabaseDirectory; > +@property (nonatomic, copy, setter=_setServiceWorkerRegistrationDirectory:) NSURL *_serviceWorkerRegistrationDirectory WK_API_AVAILABLE(macosx(WK_MAC_TBA), ios(WK_IOS_TBA)); > @property (nonatomic, copy, setter=_setWebSQLDatabaseDirectory:) NSURL *_webSQLDatabaseDirectory; > @property (nonatomic, copy, setter=_setCookieStorageFile:) NSURL *_cookieStorageFile; > @property (nonatomic, copy, setter=_setResourceLoadStatisticsDirectory:) NSURL *_resourceLoadStatisticsDirectory WK_API_AVAILABLE(macosx(WK_MAC_TBA), ios(WK_IOS_TBA)); Seems kinda crazy that we require the client to set these separately for correct behavior.
Chris Dumez
Comment 4 2017-12-14 08:50:35 PST
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 329310 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=329310&action=review > > r=me > > > Source/WebKit/UIProcess/API/Cocoa/_WKWebsiteDataStoreConfiguration.h:42 > > @property (nonatomic, copy, setter=_setWebStorageDirectory:) NSURL *_webStorageDirectory; > > @property (nonatomic, copy, setter=_setIndexedDBDatabaseDirectory:) NSURL *_indexedDBDatabaseDirectory; > > +@property (nonatomic, copy, setter=_setServiceWorkerRegistrationDirectory:) NSURL *_serviceWorkerRegistrationDirectory WK_API_AVAILABLE(macosx(WK_MAC_TBA), ios(WK_IOS_TBA)); > > @property (nonatomic, copy, setter=_setWebSQLDatabaseDirectory:) NSURL *_webSQLDatabaseDirectory; > > @property (nonatomic, copy, setter=_setCookieStorageFile:) NSURL *_cookieStorageFile; > > @property (nonatomic, copy, setter=_setResourceLoadStatisticsDirectory:) NSURL *_resourceLoadStatisticsDirectory WK_API_AVAILABLE(macosx(WK_MAC_TBA), ios(WK_IOS_TBA)); > > Seems kinda crazy that we require the client to set these separately for > correct behavior. Agreed, I may have a better fix. I am currently trying it out.
Chris Dumez
Comment 5 2017-12-14 09:48:07 PST
EWS Watchlist
Comment 6 2017-12-14 09:50:49 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 7 2017-12-14 11:08:35 PST
Comment on attachment 329357 [details] Patch Clearing flags on attachment: 329357 Committed r225911: <https://trac.webkit.org/changeset/225911>
WebKit Commit Bot
Comment 8 2017-12-14 11:08:37 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2017-12-14 11:09:31 PST
Note You need to log in before you can comment on or make changes to this bug.