WebsiteDataStore::defaultDataStoreConfiguration() fails to set default value for serviceWorkerRegistrationDirectory https://bugs.webkit.org/show_bug.cgi?id=180794 <rdar://problem/36034667>

Reviewed by Youenn Fablet.

Set the default IndexedDB and ServiceWorker database paths in WebsiteDataStore::defaultDataStoreConfiguration().
Without this, the client is forced to set the expected path.

* UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm:
(API::WebsiteDataStore::defaultDataStoreConfiguration):
* UIProcess/API/glib/APIWebsiteDataStoreGLib.cpp:
(API::WebsiteDataStore::defaultDataStoreConfiguration):


Canonical link: https://commits.webkit.org/196713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225911 268f45cc-cd09-0410-ab3c-d52691b4dbfc